@@ -142,9 +142,6 @@ jvmArgs "--add-modules=org.graalvm.polyglot"
 if (System.getProperty('os.name').toLowerCase().contains('windows')) {
 	systemProperty 'polyglot.engine.WarnInterpreterOnly', 'false'
 	systemProperty 'user.dir', project.rootDir.absolutePath
-	// Work around Windows module system issues
-	jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED'
-	jvmArgs '--add-opens=java.base/java.util=ALL-UNNAMED'
 }
 }
 
@@ -217,9 +214,6 @@ testClusters.yamlRestTest {
 if (System.getProperty('os.name').toLowerCase().contains('windows')) {
 	systemProperty 'polyglot.engine.WarnInterpreterOnly', 'false'
 	systemProperty 'user.dir', project.rootDir.absolutePath
-	// Work around Windows module system issues
-	jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED'
-	jvmArgs '--add-opens=java.base/java.util=ALL-UNNAMED'
 }
 }
 
